--- a/teaching.html
+++ b/teaching.html
@@ -18,12 +18,12 @@ Computer science <a href="http://www.cr31.co.uk/stagecast/trains/tt0_intro.html"
 
 <br>
 <ul>
-	<li>2025: Teacher at <a href="https://2025.esslli.eu/courses-workshops-accepted.html">ESSLLI Summer School</a>
+	<li>2025: Teacher at <a href="https://2025.esslli.eu/courses-workshops-accepted.html">ESSLLI Summer School</a></p>
 		<ul>
-			<li>Category: ``Logic and Computation'', Level: ``Advanced Course''
+			<li>Category: ``Logic and Computation'', Level: ``Advanced Course''</p>
 				<ul>
 					<li>The Lambda-Calculus, from Minimal to Classical Logic -- Together with <a href="https://pageperso.lis-lab.fr/~giulio.guerrieri/">Giulio Guerrieri</a>
-					<br>More information to come in the next months
+					<br>More information to come in the next months</p>
 				</ul>
 			</li>
 		</ul>
@@ -59,20 +59,21 @@ Computer science <a href="http://www.cr31.co.uk/stagecast/trains/tt0_intro.html"
     		<ul>
     			<li>2020/21: DUT D&eacute;partement R&eacute;seaux.</p> 
         			<ul>
-        				<li><a href=./Enseignements/2020-21/AdminSyst&egrave;mes/admin_syst&egrave;mes.html>Bases des syst&egrave;mes d'exploitation (GNU/Linux)</a> - TD/TP
-        				<li><a href="./Enseignements/2020-21/Python/python.html">Programmation 1 (Python)</a>- TD/TP
+        				<li><a href=./Enseignements/2020-21/AdminSyst&egrave;mes/admin_syst&egrave;mes.html>Bases des syst&egrave;mes d'exploitation (GNU/Linux)</a> - TD/TP</br>
+        				<li><a href="./Enseignements/2020-21/Python/python.html">Programmation 1 (Python)</a>- TD/TP</br>
         			</ul>
 			</li>
     			<li>2019/20: DUT D&eacute;partement Informatique.</p>
         			<ul>
-        				<li><a href=https://www-info.iutv.univ-paris13.fr/~butelle/Polys/M2102>Architecture des r&eacute;seaux</a> - TD/TP
-        				<li>Architecture et programmation bas niveau (Portes logiques, Assembleur, C)- TD/TP
-        				<li><a href=https://www-info.iutv.univ-paris13.fr/dokuwiki/doku.php?id=m2107:start>Bases de la conception Object Oriented (Java)</a> - Projet tutor&eacute;
+        				<li><a href=https://www-info.iutv.univ-paris13.fr/~butelle/Polys/M2102>Architecture des r&eacute;seaux</a> - TD/TP</br>
+        				<li>Architecture et programmation bas niveau (Portes logiques, Assembleur, C)- TD/TP</br>
+        				<li><a href=https://www-info.iutv.univ-paris13.fr/dokuwiki/doku.php?id=m2107:start>Bases de la conception Object Oriented (Java)</a> - Projet tutor&eacute;</br>
         			</ul>
 			</li>
     		</ul>
 	</li>
 </ul>
+
 
 <hr size=3>
 
