--- a/teaching.html
+++ b/teaching.html
@@ -20,9 +20,9 @@ Computer science <a href="http://www.cr31.co.uk/stagecast/trains/tt0_intro.html"
 <ul>
 	<li>2025: Teacher at <a href="https://2025.esslli.eu/courses-workshops-accepted.html">ESSLLI Summer School</a></p>
 		<ul>
-			<li>Category: ``Logic and Computation'', Level: ``Advanced Course''</p>
+			<li>Category: <i>Logic and Computation</i>, Level: <i>Advanced Course</i></p>
 				<ul>
-					<li>The Lambda-Calculus, from Minimal to Classical Logic -- Together with <a href="https://pageperso.lis-lab.fr/~giulio.guerrieri/">Giulio Guerrieri</a>
+					<li>The Lambda-Calculus, from Minimal to Classical Logic -- Coresponsable, together with <a href="https://pageperso.lis-lab.fr/~giulio.guerrieri/">Giulio Guerrieri</a>
 					<br>More information to come in the next months</p>
 				</ul>
 			</li>
@@ -50,7 +50,7 @@ Computer science <a href="http://www.cr31.co.uk/stagecast/trains/tt0_intro.html"
 		<ul>
 			<li>Corso di laurea in Genomics</p>
 				<ul>
-					<li><a href="./Enseignements/2022-23/netsecdbs/moduleII.html">Networks, Security and Databases</a> - Coresponsable, together with <a href="https://www.pfelli.xyz/">Paolo Felli</a>
+					<li><a href="./Enseignements/2022-23/netsecdbs/moduleII.html">Networks, Security and Databases</a> -- Coresponsable, together with <a href="https://www.pfelli.xyz/">Paolo Felli</a>
 					<br> (I am the responsable of Module 2: Elements of Complexity, Cryptography, Machine Learning)</p>
 				</ul>
 			</li>
