--- a/teaching.html
+++ b/teaching.html
@@ -32,7 +32,7 @@ Computer science <a href="http://www.cr31.co.uk/stagecast/trains/tt0_intro.html"
 		<ul>
         	        <li>MSc in Computer Science</p>
        	                	<ul>
-                                	<li><a href="https://moodle.bath.ac.uk/">Foundations of Computation<</a></p>
+                                	<li><a href="https://moodle.bath.ac.uk/">Foundations of Computation</a></p>
                         	</ul>
                 	</li>
         	</ul>
@@ -60,14 +60,14 @@ Computer science <a href="http://www.cr31.co.uk/stagecast/trains/tt0_intro.html"
     			<li>2020/21: DUT D&eacute;partement R&eacute;seaux.</p> 
         			<ul>
         				<li><a href=./Enseignements/2020-21/AdminSyst&egrave;mes/admin_syst&egrave;mes.html>Bases des syst&egrave;mes d'exploitation (GNU/Linux)</a> - TD/TP</br>
-        				<li><a href="./Enseignements/2020-21/Python/python.html">Programmation 1 (Python)</a>- TD/TP</br>
+        				<li><a href="./Enseignements/2020-21/Python/python.html">Programmation 1 (Python)</a>- TD/TP</p>
         			</ul>
 			</li>
     			<li>2019/20: DUT D&eacute;partement Informatique.</p>
         			<ul>
         				<li><a href=https://www-info.iutv.univ-paris13.fr/~butelle/Polys/M2102>Architecture des r&eacute;seaux</a> - TD/TP</br>
         				<li>Architecture et programmation bas niveau (Portes logiques, Assembleur, C)- TD/TP</br>
-        				<li><a href=https://www-info.iutv.univ-paris13.fr/dokuwiki/doku.php?id=m2107:start>Bases de la conception Object Oriented (Java)</a> - Projet tutor&eacute;</br>
+        				<li><a href=https://www-info.iutv.univ-paris13.fr/dokuwiki/doku.php?id=m2107:start>Bases de la conception Object Oriented (Java)</a> - Projet tutor&eacute;</p>
         			</ul>
 			</li>
     		</ul>
