--- a/research.html
+++ b/research.html
@@ -84,7 +84,7 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 
 	
 <p>
-<h3>Invited Seminars and Tutorials at International and National Academic Events</h3>
+<h3>Invited Lectures and Talks at International and National Academic Events</h3>
 <ul>
 <li>2024, 8th International Workshop on Trends in Linear Logic and Applications "TLLA" (Tallinn, Estonia)<br>
 	Tutorial:
@@ -151,6 +151,7 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 <p>
 <h3>Invited Research Seminars</h3>
 <ul>
+	<li>2024, University of Sussex (UK), School of Informatics: <i>A survey on Dialectica and Differentiation, through categories</i></li>
 <li>2024, Universit&eacute; Paris Est - Cr&eacute;teil (France), Laboratoire d'Algorithmique, Complexit&eacute; et Logique (LACL): <i>Lambda-Calculus, Taylor Expansion and (Tropical) Quantitative Semantics: an overview</i><br><br>
 <li>2023, Universit&eacute; Savoie Mont Blanc (France), Laboratoire de Math&eacute;matiques (LAMA): <i>&lambda;-calculus goes to the tropics</i><br><br>
 <li>2022, Universit&eacute; Paris Cit&eacute; (France), Institut de Recherche en Informatique Fondamentale (IRIF): <i>&lambda;-calculus goes to the tropics</i> (on blackboard)<br><br>
