--- a/research.html
+++ b/research.html
@@ -151,7 +151,7 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 <p>
 <h3>Invited Research Seminars</h3>
 <ul>
-	<li>2024, University of Sussex (UK), School of Informatics: <i>A survey on Dialectica and Differentiation, through categories</i></li><br>
+	<li>2024, University of Sussex (UK), School of Informatics: <i>An overview on Dialectica and Differentiation</i></li><br>
 	<li>2024, Universit&eacute; Paris Est - Cr&eacute;teil (France), Laboratoire d'Algorithmique, Complexit&eacute; et Logique (LACL): <i>Lambda-Calculus, Taylor Expansion and (Tropical) Quantitative Semantics: an overview</i></li><br>
 	<li>2023, Universit&eacute; Savoie Mont Blanc (France), Laboratoire de Math&eacute;matiques (LAMA): <i>&lambda;-calculus goes to the tropics</i></li><br>
 	<li>2022, Universit&eacute; Paris Cit&eacute; (France), Institut de Recherche en Informatique Fondamentale (IRIF): <i>&lambda;-calculus goes to the tropics</i> (on blackboard)</li><br>
