--- a/phd.html
+++ b/phd.html
@@ -15,6 +15,7 @@ PhD defence of Davide Barbarossa
 <p>
 Title: Towards a resource based approximation theory of programs.
 <br>Manuscript: <a href="phdThesis.pdf">here</a>.
+<br>There is an <a href="./papers/erratacorrige_phd.pdf">Errata Corrige</a>: it's about small details, but especially if you are reading Section 3.5 you would want to have a look at it.
 <br>Slides of the presentation: <a href=phdTransparents.pdf>here</a>.
 <br>Date: December 10<sup>th</sup> 2021 at 2pm.
 <br>Address: 
