--- a/teaching.html
+++ b/teaching.html
@@ -9,7 +9,7 @@
 
 <p align = right>
 <CITE>
-Computer science <a href="http://www.cr31.co.uk/stagecast/trains/tt0_intro.html">is not about computers</a>, in the same way that astronomy is not about telescopes.
+Computer science <a href="https://www.boristhebrave.com/permanent/24/06/cr31/stagecast/trains/tt7_turing_mc.html">is not about computers</a>, in the same way that astronomy is not about telescopes.
 <br> -- Disputed: Hal Abelson, Michael R. Fellows, Ian Parberry, Edsger Dijkstra.
 </CITE>
 </p>
