--- a/teaching.html
+++ b/teaching.html
@@ -22,7 +22,7 @@ Computer science <a href="https://www.boristhebrave.com/permanent/24/06/cr31/sta
 		<ul>
 			<li>Category: <i>Logic and Computation</i>, Level: <i>Advanced Course</i></p>
 				<ul>
-					<li>a href=./Enseignements/2024-25/ESSLLI.html>The Lambda-Calculus, from Minimal to Classical Logic</a> -- Coresponsable, together with <a href="https://pageperso.lis-lab.fr/~giulio.guerrieri/">Giulio Guerrieri</a>
+					<li><a href=./Enseignements/2024-25/ESSLLI.html>The Lambda-Calculus, from Minimal to Classical Logic</a> -- Coresponsable, together with <a href="https://pageperso.lis-lab.fr/~giulio.guerrieri/">Giulio Guerrieri</a>
 					<br>More information to come in the next months</p>
 				</ul>
 			</li>
