--- a/research.html
+++ b/research.html
@@ -43,7 +43,7 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 
 <p><h4>Currently, the following thoughts fill my mind...</h4>
 <li> Dialectica transformation and categories for differential geometry/&#955;-calculus </li>
-<li> Tropical models of differential &#955;-calculus </li>
+<li> Tropical models of &#955;-calculi </li>
 <li> What is an approximation of a programming language? </li>
 </p>
 
@@ -105,7 +105,7 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 	Seminar:
 	<i>An overview of (Tropical) Quantitative Semantics and Taylor Expansion for the &lambda;-calculus</i> <a href="./seminars/Seminar_SMLS.pdf">(slides)</a>
 	<br><br></li>
-<li>2023, Journ&eacute;e interdisciplinaire ``Logique, Langage et Computation'' (Lyon, France)<br>
+<li>2023, Journ&eacute;e d'&egrave;tude ``Logique, langage et computation'' : autour de la logique linéaire et ses interfaces (Lyon, France)<br>
 	Seminar:
 	<i>R&eacute;flexions sur les fondements des math&eacute;matiques, &agrave; la lumi&egrave;re de l'informatique</i> <a href="./seminars/philo_Lyon23.pdf">(transparents)</a>.
 	<br><br></li>
@@ -151,6 +151,7 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 <p>
 <h3>Invited Research Seminars</h3>
 <ul>
+	<li>2024, Università Roma Tre (Italy), Workshop ``Trends in Proof-Theory of Linear Logic'': <i>An overview on Dialectica as Differentiation</i></li><br>
 	<li>2024, University of Sussex (UK), School of Informatics: <i>An overview on Dialectica and Differentiation</i></li><br>
 	<li>2024, Universit&eacute; Paris Est - Cr&eacute;teil (France), Laboratoire d'Algorithmique, Complexit&eacute; et Logique (LACL): <i>Lambda-Calculus, Taylor Expansion and (Tropical) Quantitative Semantics: an overview</i></li><br>
 	<li>2023, Universit&eacute; Savoie Mont Blanc (France), Laboratoire de Math&eacute;matiques (LAMA): <i>&lambda;-calculus goes to the tropics</i></li><br>
@@ -190,10 +191,12 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 
 
 <p>
-<h3>Drafts (no peer review)</h3>
+<h3>Drafts and Preprints (no peer review)</h3>
 <ul>
+	<li><i>On the algorithmic structure of Dialectica programs</i> <a href="https://arxiv.org/abs/2501.16208">(arxiv)</a> <!--<a href="bibtex.html#BarbarossaLDraft">(bib)</a>--><br><br>
+	<li><i>Tropical Geometry of Probabilistic Programming Languages</i> <a href="https://arxiv.org/abs/2501.15637">(arxiv)</a> <!--<a href="bibtex.html#BarbarossaLDraft">(bib)</a>--><br><br>
+	<li><i>On Dialectica and Differentiation, via Categories</i> <a href="https://arxiv.org/abs/2410.22494">(arxiv)</a> <!--<a href="bibtex.html#BarbarossaLDraft">(bib)</a>--><br><br>
 	<li><i>&#955;-calculus is not an exotic mathematical subject</i> <a href="./papers/LamCalcNotExotic.pdf">(pdf)</a> <a href="bibtex.html#BarbarossaLDraft">(bib)</a><br><br>
-	<li><i>On Dialectica and Differentiation, via Categories</i> <a href="./papers/dialVSdiff.pdf">(pdf)</a> <!--<a href="bibtex.html#BarbarossaLDraft">(bib)</a>--><br><br>
 </ul>
 
 </p>
