--- a/research.html
+++ b/research.html
@@ -66,7 +66,7 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 <h3>Conference and Journal Papers (with peer review)</h3>
 
 <ul>
-   <li><b><i>Tropical Mathematics and the Lambda-Calculus I: Metric and Differential Analysis of Effectful Programs</i></b> <a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.CSL.2024.14">(PDF)</a> (long version: soon on arxiv)<br>
+   <li><b><i>Tropical Mathematics and the Lambda-Calculus I: Metric and Differential Analysis of Effectful Programs</i></b> <a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.CSL.2024.14">(PDF)</a> <a href="https://arxiv.org/abs/2311.15704">(arxiv long version)<br>
 	Davide Barbarossa and Paolo Pistone<br>
 	32nd EACSL Annual Conference on Computer Science Logic (CSL 2024)<br><br>
    <li><b><i>Resource approximation for the &#955;&#956;-calculus</i></b> <a href="./papers/LICS22.pdf">(PDF)</a> <a href="bibtex.html#BarbarossaLICS22">(bib)</a> <a href="./seminars/LICS22.pdf">(slides)</a> (long version: see my PhD thesis)<br>
@@ -193,10 +193,10 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 <p>
 <h3>Drafts and Preprints (no peer review)</h3>
 <ul>
-	<li><i>On the algorithmic structure of Dialectica programs</i> <a href="https://arxiv.org/abs/2501.16208">(arxiv)</a> <!--<a href="bibtex.html#BarbarossaLDraft">(bib)</a>--><br><br>
-	<li><i>Tropical Geometry of Probabilistic Programming Languages</i> <a href="https://arxiv.org/abs/2501.15637">(arxiv)</a> <!--<a href="bibtex.html#BarbarossaLDraft">(bib)</a>--><br><br>
-	<li><i>On Dialectica and Differentiation, via Categories</i> <a href="https://arxiv.org/abs/2410.22494">(arxiv)</a> <!--<a href="bibtex.html#BarbarossaLDraft">(bib)</a>--><br><br>
-	<li><i>&#955;-calculus is not an exotic mathematical subject</i> <a href="./papers/LamCalcNotExotic.pdf">(pdf)</a> <a href="bibtex.html#BarbarossaLDraft">(bib)</a><br><br>
+	<li>2025: <i>On the algorithmic structure of Dialectica programs</i> <a href="https://arxiv.org/abs/2501.16208">(arxiv)</a> <!--<a href="bibtex.html#BarbarossaLDraft">(bib)</a>--><br><br>
+	<li>2025: <i>Tropical Geometry of Probabilistic Programming Languages</i> <a href="https://arxiv.org/abs/2501.15637">(arxiv)</a> <!--<a href="bibtex.html#BarbarossaLDraft">(bib)</a>--><br><br>
+	<li>2025: <i>On Dialectica and Differentiation, via Categories</i> <a href="https://arxiv.org/abs/2410.22494">(arxiv)</a> <!--<a href="bibtex.html#BarbarossaLDraft">(bib)</a>--><br><br>
+	<li>2022: <i>&#955;-calculus is not an exotic mathematical subject</i> <a href="./papers/LamCalcNotExotic.pdf">(pdf)</a><br><br>
 </ul>
 
 </p>
