--- a/research.html
+++ b/research.html
@@ -69,10 +69,10 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
    <li><b><i>Tropical Mathematics and the Lambda-Calculus I: Metric and Differential Analysis of Effectful Programs</i></b> <a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.CSL.2024.14">(PDF)</a> (long version: <a href="https://arxiv.org/abs/2311.15704">arxiv</a>)<br>
 	Davide Barbarossa and Paolo Pistone<br>
 	32nd EACSL Annual Conference on Computer Science Logic (CSL 2024)<br><br>
-   <li><b><i>Resource approximation for the &#955;&#956;-calculus</i></b> <a href="./papers/LICS22.pdf">(PDF)</a> <a href="bibtex.html#BarbarossaLICS22">(bib)</a> <a href="./seminars/LICS22.pdf">(slides)</a> (long version: see my PhD thesis)<br>
+   <li><b><i>Resource approximation for the &#955;&#956;-calculus</i></b> <a href="./papers/LICS22.pdf">(PDF)</a> <a href="./seminars/LICS22.pdf">(slides)</a> (long version: see my PhD thesis)<br>
         Davide Barbarossa<br>
         36th Annual ACM/IEEE Symposium on Logic in Computer Science (LICS 2022)<br><br>
-   <li><b><i>Taylor Subsumes Scott, Berry, Kahn and Plotkin</i></b> <a href="https://dl.acm.org/doi/10.1145/3371069">(PDF)</a> <a href="bibtex.html#BarbarossaM20">(bib)</a> (long version: see my PhD thesis)<br>
+   <li><b><i>Taylor Subsumes Scott, Berry, Kahn and Plotkin</i></b> <a href="https://dl.acm.org/doi/10.1145/3371069">(PDF)</a> (long version: see my PhD thesis)<br>
 	Davide Barbarossa and Giulio Manzonetto<br>
 	Principles of Programming Languages (POPL) 2020, PACMPL Vol. 4, pp. 1:1-1:23<br>
  	<i>The paper received a Distinguished Paper Award from the POPL program committee!</i>
@@ -134,7 +134,7 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
     	<i>An overview on the Taylor expansion of programs</i> <a href="./seminars/AILA22.pdf"> (slides)</a>
 	<br><br></li>
 <li>2022, Ha&iuml;fa (Israel), Joint 7th International Workshop on Linearity and 6th International Workshop on Trends in Linear Logic and Applications (TLLA):
-    	<i>Denotational semantics driven simplicial homology?</i> <a href="./seminars/TLLA22.pdf">(slides)</a> <a href="./papers/TLLA22.pdf">(long abstract)</a> <a href="bibtex.html#BarbarossaTLLA22">(bib)</a>
+    	<i>Denotational semantics driven simplicial homology?</i> <a href="./seminars/TLLA22.pdf">(slides)</a> <a href="./papers/TLLA22.pdf">(long abstract)</a>
 	<br><br></li>
 <li>2019, Pavia (Italy), XXI Congresso Unione Matematica Italiana:
     	<i>Introduzione alla Realizzabilit&agrave; classica di Krivine</i> <a href="./seminars/CongressoUMI2019.pdf">(lucidi)</a>
@@ -173,7 +173,7 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 <ul>
 	<li>
 		<b>PhD:</b>
-		<a href="https://theses.hal.science/tel-03886068v1"><i> Towards a resource based approximation theory of programs.</i></a> <a href="bibtex.html#BarbarossaPhD">(bib)</a>.
+		<a href="https://theses.hal.science/tel-03886068v1"><i> Towards a resource based approximation theory of programs.</i></a>.
 		<br>There is an <a href="./papers/erratacorrige_phd.pdf">Errata Corrige</a>: it's about small details, but especially if you are reading Section 3.5 you would want to have a look at it.
 		<br>You can also look at the <a href="./seminars/phdTransparents.pdf">slides</a> of the defence.
 		<br>Main topics: <i>&#955;-calculus, &#955;&#956;-calculus, Taylor expansion and resources approximation</i><br>.
