--- a/research.html
+++ b/research.html
@@ -69,7 +69,7 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
    <li><b><i>Tropical Mathematics and the Lambda-Calculus I: Metric and Differential Analysis of Effectful Programs</i></b> <a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.CSL.2024.14">(PDF)</a> (long version: <a href="https://arxiv.org/abs/2311.15704">arxiv</a>)<br>
 	Davide Barbarossa and Paolo Pistone<br>
 	32nd EACSL Annual Conference on Computer Science Logic (CSL 2024)<br><br>
-   <li><b><i>Resource approximation for the &#955;&#956;-calculus</i></b> <a href="./papers/LICS22.pdf">(PDF)</a> <a href="./seminars/LICS22.pdf">(slides)</a> (long version: see my PhD thesis)<br>
+   <li><b><i>Resource approximation for the &#955;&#956;-calculus</i></b> <a href="./seminars/LICS22.pdf">(slides)</a> <a href="./papers/LICS22.pdf">(PDF)</a> (long version: see my PhD thesis)<br>
         Davide Barbarossa<br>
         36th Annual ACM/IEEE Symposium on Logic in Computer Science (LICS 2022)<br><br>
    <li><b><i>Taylor Subsumes Scott, Berry, Kahn and Plotkin</i></b> <a href="https://dl.acm.org/doi/10.1145/3371069">(PDF)</a> (long version: see my PhD thesis)<br>
@@ -151,7 +151,7 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 <p>
 <h3>Invited Research Seminars</h3>
 <ul>
-	<li>2024, Università Roma Tre (Italy), Workshop ``Trends in Proof-Theory of Linear Logic'': <i>An overview on Dialectica as Differentiation</i></li><br>
+	<li>2024, Università Roma Tre (Italy), Workshop ``Trends in Proof-Theory of Linear Logic'': <i>An overview on Dialectica as Differentiation</i> <a href="./seminars/dialVSdiff.pdf">(slides)</a></li><br>
 	<li>2024, University of Sussex (UK), School of Informatics: <i>An overview on Dialectica and Differentiation</i></li><br>
 	<li>2024, Universit&eacute; Paris Est - Cr&eacute;teil (France), Laboratoire d'Algorithmique, Complexit&eacute; et Logique (LACL): <i>Lambda-Calculus, Taylor Expansion and (Tropical) Quantitative Semantics: an overview</i></li><br>
 	<li>2023, Universit&eacute; Savoie Mont Blanc (France), Laboratoire de Math&eacute;matiques (LAMA): <i>&lambda;-calculus goes to the tropics</i></li><br>
