--- a/research.html
+++ b/research.html
@@ -52,11 +52,10 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 <p>
 <h3>Responsabilities</h3>
 <ul>
-   <li>Co-organiser of the workshop <a href="https://site.unibo.it/diapason/en/agenda/directions-and-perspectives-in-the-lambda-calculus">Directions and perspectives in the &#955;-calculus</a>, Bologna, 2024<br><br>
-   <li>Member of <a href="https://www.ailalogica.it/">AILA</a> (Associazione Italiana per la Logica e le sue Applicazioni), and of <a href="https://www.irif.fr/gt-scalp/index">GT Scalp</a> (Structures formelles pour le CALcul et les Preuves)<br><br>
-   <li>Reviewer and ``sub-reviewer'' for international conferences and journals: LICS, LMCS, FSCD, FoSSaCS, MFPS, CSL.
-   <li>Reviewer for books: Chapter 2 and Chapter 8 of: <a href="https://www.collegepublications.co.uk/logic/mlf/?00035">A Lambda Calculus Satellite</a> (by H. Barendregt and G. Manzonetto).
-   </li>
+	<li>Co-organiser of the workshop <a href="https://site.unibo.it/diapason/en/agenda/directions-and-perspectives-in-the-lambda-calculus">Directions and perspectives in the &#955;-calculus</a>, Bologna, 2024</li>
+	<li>Member of <a href="https://www.ailalogica.it/">AILA</a> (Associazione Italiana per la Logica e le sue Applicazioni), and of <a href="https://www.irif.fr/gt-scalp/index">GT Scalp</a> (Structures formelles pour le CALcul et les Preuves)</li>
+	<li>Reviewer and ``sub-reviewer'' for international conferences and journals: LICS, LMCS, FSCD, FoSSaCS, MFPS, CSL.</li>
+	<li>Reviewer for books: Chapter 2 and Chapter 8 of: <a href="https://www.collegepublications.co.uk/logic/mlf/?00035">A Lambda Calculus Satellite</a> (by H. Barendregt and G. Manzonetto).</li>
 </ul>
 
 
