--- a/research.html
+++ b/research.html
@@ -52,8 +52,10 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 <p>
 <h3>Responsabilities</h3>
 <ul>
-	<li>Co-organiser of the workshop <a href="https://site.unibo.it/diapason/en/agenda/directions-and-perspectives-in-the-lambda-calculus">Directions and perspectives in the &#955;-calculus</a>, Bologna, 2024<br></li>
-	<li>Member of <a href="https://www.ailalogica.it/">AILA</a> (Associazione Italiana per la Logica e le sue Applicazioni), and of <a href="https://www.irif.fr/gt-scalp/index">GT Scalp</a> (Structures formelles pour le CALcul et les Preuves)</li>
+	<!--<li>Co-organiser of the workshop <a href="">Dial Realis</a>, Bath, 2025<br><br></li>-->
+	<!--<li>PC member of the 9th International Workshop on Trends in Linear Logic and Applications (TLLA 2025)<br><br></li>-->
+	<li>Co-organiser of the workshop <a href="https://site.unibo.it/diapason/en/agenda/directions-and-perspectives-in-the-lambda-calculus">Directions and perspectives in the &#955;-calculus</a>, Bologna, 2024<br><br></li>
+	<li>Member of <a href="https://www.ailalogica.it/">AILA</a> (Associazione Italiana per la Logica e le sue Applicazioni), and of <a href="https://www.irif.fr/gt-scalp/index">GT Scalp</a> (Structures formelles pour le CALcul et les Preuves)<br></li>
 	<li>Reviewer and ``sub-reviewer'' for international conferences and journals: LICS, LMCS, FSCD, FoSSaCS, MFPS, CSL.</li>
 	<li>Reviewer for books: Chapter 2 and Chapter 8 of: <a href="https://www.collegepublications.co.uk/logic/mlf/?00035">A Lambda Calculus Satellite</a> (by H. Barendregt and G. Manzonetto).</li>
 </ul>
@@ -85,7 +87,9 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 <p>
 <h3>Invited Lectures and Talks at International and National Academic Events</h3>
 <ul>
-<li>2024, 8th International Workshop on Trends in Linear Logic and Applications "TLLA" (Tallinn, Estonia)<br>
+	<!--<li>2025, Realis workshop (CIRM, France)<br><br></li>-->
+	
+	<li>2024, 8th International Workshop on Trends in Linear Logic and Applications "TLLA" (Tallinn, Estonia)<br>
 	Tutorial:
 	<i>Differential aspects of the approximation theory of the lambda-calculus</i> (on blackboard)
 	<small><i>
@@ -100,11 +104,13 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 		  </p>
 		  </details>
 	</small><br></li>
-<li>2024, 5th Southen Midlands Logic Seminar (Bath, UK)<br>
+	
+	<li>2024, 5th Southen Midlands Logic Seminar (Bath, UK)<br>
 	Seminar:
 	<i>An overview of (Tropical) Quantitative Semantics and Taylor Expansion for the &lambda;-calculus</i> <a href="./seminars/Seminar_SMLS.pdf">(slides)</a>
 	<br><br></li>
-<li>2023, Journ&eacute;e d'&egrave;tude ``Logique, langage et computation'' : autour de la logique linéaire et ses interfaces (Lyon, France)<br>
+	
+	<li>2023, Journ&eacute;e d'&egrave;tude ``Logique, langage et computation'' : autour de la logique linéaire et ses interfaces (Lyon, France)<br>
 	Seminar:
 	<i>R&eacute;flexions sur les fondements des math&eacute;matiques, &agrave; la lumi&egrave;re de l'informatique</i> <a href="./seminars/philo_Lyon23.pdf">(transparents)</a>.
 	<br><br></li>
