--- a/research.html
+++ b/research.html
@@ -53,8 +53,8 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 <h3>Responsabilities</h3>
 <ul>
 	<!--<li>Co-organiser of the workshop <a href="">Dial Realis</a>, Bath, 2025<br><br></li>-->
-	<!--<li>PC member of the 9th International Workshop on Trends in Linear Logic and Applications (TLLA 2025)<br><br></li>-->
-	<li>Co-organiser of the workshop <a href="https://site.unibo.it/diapason/en/agenda/directions-and-perspectives-in-the-lambda-calculus">Directions and perspectives in the &#955;-calculus</a>, Bologna, 2024<br><br></li>
+	<li>Program Committee member of the <a href="https://lipn.univ-paris13.fr/TLLA/2025/">9th International Workshop on Trends in Linear Logic and Applications</a> (TLLA), Birmingham, UK, 2025<br><br></li>
+	<li>Co-organiser of the workshop <a href="https://site.unibo.it/diapason/en/agenda/directions-and-perspectives-in-the-lambda-calculus">Directions and perspectives in the &#955;-calculus</a>, Bologna, Italy, 2024<br><br></li>
 	<li>Member of <a href="https://www.ailalogica.it/">AILA</a> (Associazione Italiana per la Logica e le sue Applicazioni), and of <a href="https://www.irif.fr/gt-scalp/index">GT Scalp</a> (Structures formelles pour le CALcul et les Preuves)<br><br></li>
 	<li>Reviewer and ``sub-reviewer'' for international conferences and journals: LICS, LMCS, FSCD, FoSSaCS, MFPS, CSL.<br><br></li>
 	<li>Reviewer for books: Chapter 2 and Chapter 8 of: <a href="https://www.collegepublications.co.uk/logic/mlf/?00035">A Lambda Calculus Satellite</a> (by H. Barendregt and G. Manzonetto).</li>
