--- a/research.html
+++ b/research.html
@@ -87,9 +87,9 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 <p>
 <h3>Invited Lectures and Talks at International and National Academic Events</h3>
 <ul>
-	<!--<li>2025, Realis workshop (CIRM, France)<br><br></li>-->
+	<li>2025, <a href="https://conferences.cirm-math.fr/3577.html">Workshop ``Realizability''</a> (CIRM, France)<br></li>
 	
-	<li>2024, 8th International Workshop on Trends in Linear Logic and Applications "TLLA" (Tallinn, Estonia)<br>
+	<li>2024, 8th International Workshop on Trends in Linear Logic and Applications ``TLLA'' (Tallinn, Estonia)<br>
 	Tutorial:
 	<i>Differential aspects of the approximation theory of the lambda-calculus</i> (on blackboard)
 	<small><i>
