--- a/research.html
+++ b/research.html
@@ -87,32 +87,35 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 <p>
 <h3>Invited Lectures and Talks at International and National Academic Events</h3>
 <ul>
-	<li>2025, <a href="https://conferences.cirm-math.fr/3577.html">Workshop ``Realizability''</a> (CIRM, France)<br><br></li>
+	<li>2025, <a href="https://conferences.cirm-math.fr/3577.html">Workshop ``Realizability''</a> (CIRM, France)<br>
+		Seminar:
+		<i>Dialectica, its realisers and Hoare logic</i> <a href="./seminars/realis_workshop_dhl.pdf">(slides)</a>
+	<br><br></li>
 	
 	<li>2024, 8th International Workshop on Trends in Linear Logic and Applications ``TLLA'' (Tallinn, Estonia)<br>
-	Tutorial:
-	<i>Differential aspects of the approximation theory of the lambda-calculus</i> (on blackboard)
-	<small><i>
+		Tutorial:
+		<i>Differential aspects of the approximation theory of the lambda-calculus</i> (on blackboard)
+		<small><i>
 		<details>
-		  <summary>
-		  Abstract
-		  </summary>
-		  <p>
+		<summary>
+		Abstract
+		</summary>
+		<p>
 			In this tutorial, we will study the notion of approximation for the lambda-calculus.
 			After having introduced the topic, we will focus on the so-called "resource approximation" and use it in order to prove the Continuity Lemma for the lambda-calculus.
 			We will then see how this approximation technique is actually related to the notion of differentiation in the lambda-calculus on the one hand, and how it provides an abstraction of the usual notion of differentiation from mathematical analysis on the other hand, by looking (time permitting) at its categorical formulation.</i>
-		  </p>
-		  </details>
+		</p>
+		</details>
 	</small><br></li>
 	
 	<li>2024, 5th Southen Midlands Logic Seminar (Bath, UK)<br>
-	Seminar:
-	<i>An overview of (Tropical) Quantitative Semantics and Taylor Expansion for the &lambda;-calculus</i> <a href="./seminars/Seminar_SMLS.pdf">(slides)</a>
+		Seminar:
+		<i>An overview of (Tropical) Quantitative Semantics and Taylor Expansion for the &lambda;-calculus</i> <a href="./seminars/Seminar_SMLS.pdf">(slides)</a>
 	<br><br></li>
 	
 	<li>2023, Journ&eacute;e d'&egrave;tude ``Logique, langage et computation'' : autour de la logique linéaire et ses interfaces (Lyon, France)<br>
-	Seminar:
-	<i>R&eacute;flexions sur les fondements des math&eacute;matiques, &agrave; la lumi&egrave;re de l'informatique</i> <a href="./seminars/philo_Lyon23.pdf">(transparents)</a>.
+		Seminar:
+		<i>R&eacute;flexions sur les fondements des math&eacute;matiques, &agrave; la lumi&egrave;re de l'informatique</i> <a href="./seminars/philo_Lyon23.pdf">(transparents)</a>.
 	<br><br></li>
 </ul>
 
