--- a/research.html
+++ b/research.html
@@ -83,6 +83,17 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 
 <hr size=3>
 
+<p>
+<h3>Preprints (not published... yet)</h3>
+<ul>
+	<li>2025: <i>On the algorithmic structure of Dialectica programs</i> <a href="https://arxiv.org/abs/2501.16208">(arxiv)</a> <!--<a href="bibtex.html#BarbarossaLDraft">(bib)</a>--><br><br>
+	<li>2025: <i>Tropical Geometry of Probabilistic Programming Languages</i> <a href="https://arxiv.org/abs/2501.15637">(arxiv)</a> <!--<a href="bibtex.html#BarbarossaLDraft">(bib)</a>--><br><br>
+	<li>2025: <i>An excursion into Dialectica and Differentiation</i> <a href="https://arxiv.org/abs/2410.22494">(arxiv)</a> <!--<a href="bibtex.html#BarbarossaLDraft">(bib)</a>--><br><br>
+</ul>
+</p>
+		
+<hr size=3>
+
 	
 <p>
 <h3>Invited Lectures and Talks at International and National Academic Events</h3>
@@ -197,19 +208,15 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 
 <hr size=3>
 
-
 <p>
-<h3>Drafts and Preprints (no peer review)</h3>
+<h3>Notes (no peer review)</h3>
 <ul>
-	<li>2025: <i>On the algorithmic structure of Dialectica programs</i> <a href="https://arxiv.org/abs/2501.16208">(arxiv)</a> <!--<a href="bibtex.html#BarbarossaLDraft">(bib)</a>--><br><br>
-	<li>2025: <i>Tropical Geometry of Probabilistic Programming Languages</i> <a href="https://arxiv.org/abs/2501.15637">(arxiv)</a> <!--<a href="bibtex.html#BarbarossaLDraft">(bib)</a>--><br><br>
-	<li>2025: <i>An excursion into Dialectica and Differentiation</i> <a href="https://arxiv.org/abs/2410.22494">(arxiv)</a> <!--<a href="bibtex.html#BarbarossaLDraft">(bib)</a>--><br><br>
 	<li>2022: <i>&#955;-calculus is not an exotic mathematical subject</i> <a href="./papers/LamCalcNotExotic.pdf">(pdf)</a><br><br>
 </ul>
-
 </p>
 		
 <hr size=3>
+
 
 <!--
 	
