--- a/research.html
+++ b/research.html
@@ -136,6 +136,10 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 
 <p><h3>Workshops, Congress Communications (with peer review)</h3>
 <ul>
+<li>2024, Roma (Italy), International Research Network ``Logic and Interaction'' -- Kickoff meeting:
+	<i>On the tropical geometry of probabilistic programming languages</i>
+	<a href="./seminars/Séminaire_Rome.pdf">(slides)</a>
+	<br><br></li>
 <li>2024, Tallinn (Estonia), 8th International Workshop on Trends in Linear Logic and Applications (TLLA):
 	<i>Stability property for the Call-by-Value &#955;-calculus through Taylor expansion</i>
 	<a href="./seminars/TLLA24.pdf">(slides)</a> <a href="./papers/TLLA24.pdf">(pdf)</a>
