--- a/research.html
+++ b/research.html
@@ -42,8 +42,8 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 <hr size=3>
 
 <p><h4>Currently, the following thoughts fill my mind...</h4>
-<li> Dialectica transformation and categories for differential geometry/&#955;-calculus </li>
-<li> Tropical models of &#955;-calculi </li>
+<li> Dialectica transformation, Hoare Logic, differential geometry/&#955;-calculus </li>
+<li> Tropical mathematics for &#955;-calculi </li>
 <li> What is an approximation of a programming language? </li>
 </p>
 
@@ -136,7 +136,7 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 
 <p><h3>Workshops, Congress Communications (with peer review)</h3>
 <ul>
-<li>2024, Roma (Italy), International Research Network ``Logic and Interaction'' -- Kickoff meeting:
+<li>2025, Roma (Italy), International Research Network ``Logic and Interaction'' -- Kickoff meeting:
 	<i>On the tropical geometry of probabilistic programming languages</i>
 	<a href="./seminars/Séminaire_Rome.pdf">(slides)</a>
 	<br><br></li>
