--- a/research.html
+++ b/research.html
@@ -202,8 +202,8 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 		<br>Main topics: <i>&#955;-calculus, &#955;&#956;-calculus, Taylor expansion and resources approximation.</i><br><br>
 	<li>
 		<b>Master:</b>
-		<a href="https://lipn.univ-paris13.fr/~barbarossa/TesiBarbarossaMagistrale.pdf"><i>On the computational content of proofs</i></a>.
-		<br>This is the English version for the Italian defence, which contains the content of the French version.
+		<a href="./papers/TesiBarbarossaMagistrale.pdf"><i>On the computational content of proofs</i></a>.
+		<br>This is the English version for the Italian defence, which contains the content of the French version (as Chapter 3).
 		<br>You can also look at the <a href="./seminars/M2transparents.pdf">slides</a> of the defence (in their French version for the French defence).
 		<br>Main topics: <i>Curry-Howard correspondence, Krivine's classical realisability</i>.
 </ul>
