--- a/Enseignements/2024-25/ESSLLI.html
+++ b/Enseignements/2024-25/ESSLLI.html
@@ -1,2 +1,14 @@
 Webpage for the course:
 <p><i>The Lambda-Calculus, from Minimal to Classical Logic</i>, ESSLLI 2025 Summer School (Bochum, Germany)</p>
+
+<br>
+
+Slides and/or notes for the lectures will appear here soon.
+
+<ul>
+	<li>Lecture 1 <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
+  <li>Lecture 2 <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
+  <li>Lecture 3 <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
+  <li>Lecture 4 <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
+  <li>Lecture 5 <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
+</ul>
