--- a/Enseignements/2024-25/ESSLLI.html
+++ b/Enseignements/2024-25/ESSLLI.html
@@ -1,5 +1,13 @@
-Webpage for the course:
-<p><i>The Lambda-Calculus, from Minimal to Classical Logic</i>, ESSLLI 2025 Summer School (Bochum, Germany)</p>
+<p>
+	Advanced course:
+	<i>The Lambda-Calculus, from Minimal to Classical Logic</i>, <a href="https://2025.esslli.eu/">ESSLLI 2025 Summer School</a> (Bochum, Germany)
+</p>
+
+<br> Teachers: <a href="https://davidebarbarossa12.github.io/index.html">Davide Barbarossa</a>, <a href="https://pageperso.lis-lab.fr/~giulio.guerrieri/">Giulio Guerrieri</a>
+<br> Date: 28/07/2025-01/08/2025
+<br> Time: 5.00pm - 6.30pm 
+<br> Room: HGB 40
+<br> You can also look at the <a href="https://2025.esslli.eu/courses-workshops-accepted/week-1-and-2-schedule.html">schedule</a>.
 
 <br>
 
