--- a/Enseignements/2024-25/ESSLLI.html
+++ b/Enseignements/2024-25/ESSLLI.html
@@ -1,22 +1,41 @@
+<!DOCTYPE html>
+<html lang="en-UK">
+<head>
+<title>ESSLLI lectures</title>
+<link rel=stylesheet type="text/css" href="style.css"></head>
+<body>
+
+<h2>
 <p>
-	Advanced course:
-	<i>The Lambda-Calculus, from Minimal to Classical Logic</i>, <a href="https://2025.esslli.eu/">ESSLLI 2025 Summer School</a> (Bochum, Germany)
+<i>The Lambda-Calculus, from Minimal to Classical Logic</i> (Advanced course), <a href="https://2025.esslli.eu/">ESSLLI 2025 Summer School</a> (Bochum, Germany)
 </p>
+</h2>
 
-<br> Teachers: <a href="https://davidebarbarossa12.github.io/index.html">Davide Barbarossa</a>, <a href="https://pageperso.lis-lab.fr/~giulio.guerrieri/">Giulio Guerrieri</a>
-<br> Date: 28/07/2025-01/08/2025
-<br> Time: 5.00pm - 6.30pm 
-<br> Room: HGB 40
-<br> You can also look at the <a href="https://2025.esslli.eu/courses-workshops-accepted/week-1-and-2-schedule.html">schedule</a>.
+<br> Teachers: <a href="https://davidebarbarossa12.github.io/index.html">Davide Barbarossa</a>, <a href="https://pageperso.lis-lab.fr/~giulio.guerrieri/">Giulio Guerrieri</a></br>
+<br> Date: 28/07/2025 -- 01/08/2025</br>
+<br> Time: 5.00pm -- 6.30pm </br>
+<br> Room: HGB 40</br>
+<br> You can also look at the <a href="https://2025.esslli.eu/courses-workshops-accepted/week-1-and-2-schedule.html">schedule</a>.</br>
 
-<br>
+<p>
 
 Slides and/or notes for the lectures will appear here soon.
 
 <ul>
-	<li>Lecture 1 <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
+  <li>Lecture 1 <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
   <li>Lecture 2 <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
   <li>Lecture 3 <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
   <li>Lecture 4 <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
   <li>Lecture 5 <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
 </ul>
+
+</p>
+	
+<p align="center">
+<i>
+Page maintained by Davide Barbarossa
+</i>
+</p>
+
+</body>
+</html> 
