--- a/Enseignements/2024-25/ESSLLI.html
+++ b/Enseignements/2024-25/ESSLLI.html
@@ -7,13 +7,14 @@
 
 <h2>
 <p>
-<i>The Lambda-Calculus, from Minimal to Classical Logic</i> (Advanced course), <a href="https://2025.esslli.eu/">ESSLLI 2025 Summer School</a> (Bochum, Germany)
+	<i>The Lambda-Calculus, from Minimal to Classical Logic</i> (Advanced course)
+	<br><a href="https://2025.esslli.eu/">ESSLLI 2025 Summer School</a> (Bochum, Germany)
 </p>
 </h2>
 
 <br> Teachers: <a href="https://davidebarbarossa12.github.io/index.html">Davide Barbarossa</a>, <a href="https://pageperso.lis-lab.fr/~giulio.guerrieri/">Giulio Guerrieri</a></br>
-<br> Date: 28/07/2025 -- 01/08/2025</br>
-<br> Time: 5.00pm -- 6.30pm </br>
+<br> Date: 28/07/2025 - 01/08/2025</br>
+<br> Time: 5.00pm - 6.30pm </br>
 <br> Room: HGB 40</br>
 <br> You can also look at the <a href="https://2025.esslli.eu/courses-workshops-accepted/week-1-and-2-schedule.html">schedule</a>.</br>
 
