--- a/Enseignements/2024-25/ESSLLI.html
+++ b/Enseignements/2024-25/ESSLLI.html
@@ -23,11 +23,11 @@
 Slides and/or notes for the lectures will appear here soon.
 
 <ul>
-  <li>Lecture 1 <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
-  <li>Lecture 2 <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
-  <li>Lecture 3 <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
-  <li>Lecture 4 <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
-  <li>Lecture 5 <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
+  <li>Lecture 1 <!--: Some domain theory and topology over &#8472;(U+2115): the graph~model<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
+  <li>Lecture 2 <!--: The $\lambda$-calculus<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
+  <li>Lecture 3 <!--: Category theory and denotational semantics<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
+  <li>Lecture 4 <!--: Curry-Howard and intuitionistic logic<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
+  <li>Lecture 5 <!--: Krivine's approach to classical logic<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
 </ul>
 
 </p>
