--- a/Enseignements/2024-25/ESSLLI.html
+++ b/Enseignements/2024-25/ESSLLI.html
@@ -26,7 +26,7 @@ Slides and/or notes for the lectures will appear here soon.
 
 <ul>
   <li>Lecture 1: Elements of domain theory/topology over &#8472;(U+2115) via the "graph model" <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
-  <li>Lecture 2: The $\lambda$-calculus <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
+  <li>Lecture 2: The &#955;-calculus <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
   <li>Lecture 3: Category theory for denotational semantics <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
   <li>Lecture 4: Curry-Howard and intuitionistic logic <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
   <li>Lecture 5: Krivine's approach to classical logic <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
