--- a/Enseignements/2024-25/ESSLLI.html
+++ b/Enseignements/2024-25/ESSLLI.html
@@ -25,7 +25,7 @@ Slides and/or notes for the lectures will appear here soon.
 <br>Each lecture will adress a couple of important points in the theory of programming languages proofs, by giving some basic elements for its understanding. Specifically:</br>
 
 <ul>
-  <li>Lecture 1: Elements of domain theory/topology over &#8472;(U&#43;2115) via the "graph model" <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
+  <li>Lecture 1: Elements of domain theory/topology over &#8472;(N) via the "graph model" <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
   <li>Lecture 2: The &#955;-calculus <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
   <li>Lecture 3: Category theory for denotational semantics <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
   <li>Lecture 4: Curry-Howard and intuitionistic logic <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
