--- a/Enseignements/2024-25/ESSLLI.html
+++ b/Enseignements/2024-25/ESSLLI.html
@@ -20,9 +20,10 @@
 
 <p>
 
-Slides and/or notes for the lectures will appear here soon.
+Slides and/or notes for the lectures will appear here soon.</br>
 
-<br>Each lecture will adress a couple of important points in the theory of programming languages proofs, by giving some basic elements for its understanding. Specifically:</br>
+<br>Each lecture will adress a couple of important points in the theory of programs and proofs, by giving some of its basic elements.</br>
+Specifically:
 
 <ul>
   <li>Lecture 1: Elements of domain theory/topology over &#8472;(N) via the "graph model" <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
