--- a/Enseignements/2024-25/ESSLLI.html
+++ b/Enseignements/2024-25/ESSLLI.html
@@ -26,7 +26,7 @@ Slides and/or notes for the lectures will appear here soon.</br>
 Specifically:
 
 <ul>
-  <li>Lecture 1: Domain theory/topology of the "graph model" over &#8472;(N) <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
+  <li>Lecture 1: Topology/domain-theory of the "graph model" over &#8472;(N) <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
   <li>Lecture 2: The &#955;-calculus <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
   <li>Lecture 3: Category theory for denotational semantics <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
   <li>Lecture 4: Curry-Howard and intuitionistic logic <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
