--- a/Enseignements/2024-25/ESSLLI.html
+++ b/Enseignements/2024-25/ESSLLI.html
@@ -18,12 +18,32 @@
 <br> Room: HGB 40</br>
 <br> You can also look at the <a href="https://2025.esslli.eu/courses-workshops-accepted/week-1-and-2-schedule.html">schedule</a>.</br>
 
+<hr size=3>
+
 <p>
+
+<small>
+		<details>
+		<summary>
+		Brief summary of the course
+		</summary>
+		<p>
+			<i>In this course we are going to investigate one of the key concepts of computer science,
+			namely that of (functional) programming language. In particular, we are going to stress
+			its theoretical fundations and (a small amount of) its relations with (a small part of)
+			mathematical logic. The main theme is the notion of computation, in its mathematical shape,
+			and how it enlighten the understanding of logic. Historically speaking, we cover some
+			aspects of theoretical computer science and mathematical logic developed around the '70
+			(with, at the end of this course, a brief introduction to one – among infinitely many –
+			modern research topic which conceptually follow it).</i>
+		</p>
+		</details>
+</small>
+<br>
 
 Slides and/or notes for the lectures will appear here soon.</br>
 
 <br>Each lecture will adress a couple of important points in the theory of programs and proofs, by giving some of its basic elements.</br>
-Specifically:
 
 <ul>
   <li>Lecture 1: Topology/domain-theory of the "graph model" over &#8472;(N) <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
@@ -34,6 +54,10 @@ Specifically:
 </ul>
 
 </p>
+
+<hr size=3>
+
+<hr size=3>
 	
 <p align="center">
 <i>
