--- a/Enseignements/2024-25/ESSLLI.html
+++ b/Enseignements/2024-25/ESSLLI.html
@@ -12,6 +12,8 @@
 </p>
 </h2>
 
+<hr size=3>
+
 <br> Teachers: <a href="https://davidebarbarossa12.github.io/index.html">Davide Barbarossa</a>, <a href="https://pageperso.lis-lab.fr/~giulio.guerrieri/">Giulio Guerrieri</a></br>
 <br> Date: 28/07/2025 - 01/08/2025</br>
 <br> Time: 5.00pm - 6.30pm </br>
@@ -22,13 +24,10 @@
 
 <p>
 
-<small>
-		<details>
-		<summary>
-		Brief summary of the course
-		</summary>
-		<p>
-			<i>In this course we are going to investigate one of the key concepts of computer science,
+
+Brief summary of the course
+	<p>
+		<i>In this course we are going to investigate one of the key concepts of computer science,
 			namely that of (functional) programming language. In particular, we are going to stress
 			its theoretical fundations and (a small amount of) its relations with (a small part of)
 			mathematical logic. The main theme is the notion of computation, in its mathematical shape,
@@ -36,9 +35,7 @@
 			aspects of theoretical computer science and mathematical logic developed around the '70
 			(with, at the end of this course, a brief introduction to one – among infinitely many –
 			modern research topic which conceptually follow it).</i>
-		</p>
-		</details>
-</small>
+	</p>
 <br>
 
 Slides and/or notes for the lectures will appear here soon.</br>
