--- a/Enseignements/2024-25/ESSLLI.html
+++ b/Enseignements/2024-25/ESSLLI.html
@@ -15,8 +15,8 @@
 <hr size=3>
 
 <br> Teachers: <a href="https://davidebarbarossa12.github.io/index.html">Davide Barbarossa</a>, <a href="https://pageperso.lis-lab.fr/~giulio.guerrieri/">Giulio Guerrieri</a></br>
-<br> Date: 28/07/2025 - 01/08/2025</br>
-<br> Time: 5.00pm - 6.30pm </br>
+<br> Date: 28/07/2025 – 01/08/2025</br>
+<br> Time: 5.00pm – 6.30pm </br>
 <br> Room: HGB 40</br>
 <br> You can also look at the <a href="https://2025.esslli.eu/courses-workshops-accepted/week-1-and-2-schedule.html">schedule</a>.</br>
 
@@ -29,11 +29,11 @@ Brief summary of the course
 	<p>
 		<i>In this course we are going to investigate one of the key concepts of computer science,<br>
 		namely that of (functional) programming language. In particular, we are going to stress its<br>
-		theoretical fundations and (a small amount of) its relations with (a small part of) mathematical logic.<br>
+		theoretical foundations and (a small amount of) its relations with (a small part of) mathematical logic.<br>
 		The main theme is the notion of computation, in its mathematical shape, and how it enlighten<br>
 		the understanding of logic. Historically speaking, we cover some aspects of theoretical computer science<br>
-		and mathematical logic developed around the '70 (with, at the end of this course, a brief<br>
-		introduction to one – among infinitely many – modern research topic which conceptually follow it).</i><br>
+		and mathematical logic developed around the '70 (with, at the end of this course, a brief introduction<br>
+		to one – among infinitely many – modern research topic which conceptually follow from them).</i><br>
 	</p>
 
 Slides and/or notes for the lectures will appear here soon.</br>
