--- a/Enseignements/2024-25/ESSLLI.html
+++ b/Enseignements/2024-25/ESSLLI.html
@@ -29,13 +29,13 @@
 
 Brief summary of the course
 	<p>
-		<i>In this course we are going to investigate one of the key concepts of computer science,<br>
+		<i>In this course we are going to gently investigate one of the key concepts of computer science,<br>
 		namely that of (functional) programming language. In particular, we are going to stress its<br>
 		theoretical foundations and (a small amount of) its relations with (a small part of) mathematical logic.<br>
 		The main theme is the notion of computation, in its mathematical shape, and how it enlighten<br>
 		the understanding of logic. Historically speaking, we cover some aspects of theoretical computer science<br>
 		and mathematical logic developed around the '70 (with, at the end of this course, a brief introduction<br>
-		to one – among infinitely many – modern research topic which conceptually follow from them).</i><br>
+		to one – among infinitely many – modern research topic conceptually following from those investigations).</i><br>
 	</p>
 
 Slides and/or notes for the lectures will appear here soon.</br>
