--- a/Enseignements/2024-25/ESSLLI.html
+++ b/Enseignements/2024-25/ESSLLI.html
@@ -33,9 +33,9 @@ Brief summary of the course
 		namely that of (functional) programming language. In particular, we are going to stress its<br>
 		theoretical foundations and (a small amount of) its relations with (a small part of) mathematical logic.<br>
 		The main theme is the notion of computation, in its mathematical shape, and how it enlighten<br>
-		the understanding of logic. Historically speaking, we cover some aspects of theoretical computer science<br>
-		and mathematical logic developed around the '70 (with, at the end of this course, a brief introduction<br>
-		to one – among infinitely many – modern research topic conceptually following from those investigations).</i><br>
+		the understanding of logic. We cover some classic topics of theoretical computer science and<br>
+		mathematical logic (developed around the '70) with, at the end of the course, a very brief introduction<br>
+		to one – among infinitely many – modern research topic conceptually following from those investigations.</i><br>
 	</p>
 
 Slides and/or notes for the lectures will appear here soon.</br>
@@ -43,7 +43,7 @@ Slides and/or notes for the lectures will appear here soon.</br>
 <br>Each lecture will adress a couple of important points in the theory of programs and proofs, by giving some of its basic elements.</br>
 
 <ul>
-  <li>Lecture 1: Topology/domain-theory of the "graph model" over &#8472;(N): <a href="">Notes</a> (soon the slides as well!) <!-- <a href="">Slides</a></p>-->	</li>
+  <li>Lecture 1: Topology/domain-theory of the "graph model" over &#8472;(N): <a href="Enseignements/2024-25/esslli25_notes1.pdf">Notes</a> (soon the slides as well!) <!-- <a href="">Slides</a></p>-->	</li>
   <li>Lecture 2: The &#955;-calculus <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
   <li>Lecture 3: Category theory for denotational semantics <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
   <li>Lecture 4: Curry-Howard for minimal logic <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
