--- a/Enseignements/2024-25/ESSLLI.html
+++ b/Enseignements/2024-25/ESSLLI.html
@@ -43,7 +43,7 @@ Slides and/or notes for the lectures will appear here soon.</br>
 <br>Each lecture will adress a couple of important points in the theory of programs and proofs, by giving some of its basic elements.</br>
 
 <ul>
-  <li>Lecture 1: Topology/domain-theory of the "graph model" over &#8472;(N): <a href="Enseignements/2024-25/esslli25_notes1.pdf">Notes</a> (soon the slides as well!) <!-- <a href="">Slides</a></p>-->	</li>
+  <li>Lecture 1: Topology/domain-theory of the "graph model" over &#8472;(N): <a href="./esslli25_notes1.pdf">Notes</a> (soon the slides as well!) <!-- <a href="">Slides</a></p>-->	</li>
   <li>Lecture 2: The &#955;-calculus <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
   <li>Lecture 3: Category theory for denotational semantics <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
   <li>Lecture 4: Curry-Howard for minimal logic <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
